# satellite-images-train

./: .gitignore  Dockerfile  MLproject  README.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: build-image.yml
argo-workflows/: train-workflow.yaml
bash/: mlflow-run.sh
src/: apprentissage.ipynb  brouillon.ipynb  modeles_gaetan.py  notebook_test_modele.ipynb  recuperation_scores_test.ipynb  temp.py  train.py
src/config/: dataset.py  loss.py  module.py  scheduling.py  task.py
src/data/components/: dataset.py
src/functions/: download_data.py  filter.py  instanciators.py  trainers.py
src/models/: segmentation_module.py
src/models/components/: segmentation_models.py
src/optim/: metrics.py  optimizer.py
