[project]
name = "Satellite-images-train"
version = "0.1.0"
description = "Repository for training of segmentation models on satellite imagery."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.5",
    "astrovision>=0.14.7",
    "gdal>=3.10.2",
    "mlflow>=2.21.3",
    "pytorch-lightning>=2.5.1",
    "s3fs>=2025.3.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.50.3",
]
authors = [
  {name="Thomas Faria", email="thomas.faria@insee.fr"}
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 130

[tool.uv]
default-groups = ["dev"]


[tool.uv.sources]
gdal = [
  { index = "gdal-wheels", marker = "sys_platform == 'linux'" },
  { index = "geospatial_wheels", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "geospatial_wheels"
url = "https://nathanjmcdougall.github.io/geospatial-wheels-index/"
explicit = true

[[tool.uv.index]]
name = "gdal-wheels"
url = "https://gitlab.com/api/v4/projects/61637378/packages/pypi/simple"
explicit = true
